snapshot-tests/tests/snapshots/parser__bad_booleans__leading_f.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[Wanted]: expected the literal `false`, found something else at `foo`
  ┌─ leading_f:1:7
  │
1 │ foo = f2
  │       ^ expected the literal `false`
